  * debian/control.in/libc: add a Breaks: against wcc (<< 0.0.2+dfsg-3).
  * debian/patches/any/submitted-stt-gnu-ifunc-detection.patch: update to
    version 2 of the patch to fix the wrong detection on sparc.
  * debian/patches/git-updates.diff: update from upstream stable branch:
    - Fix argument passing for inlined syscalls on mips* and riscv64.
      Closes: #951237.

 -- Samuel Thibault <sthibault@debian.org>  Sat, 08 Feb 2020 03:08:56 +0100

glibc (2.30-0experimental2) experimental; urgency=medium

  [ Aurelien Jarno ]
  * debian/patches/git-updates.diff: update from upstream stable branch.
  * debian/patches/any/submitted-stt-gnu-ifunc-detection.patch: fix
    STT_GNU_IFUNC assembler and linker detection for toolchains defaulting to
    PIE.
  * debian/sysdeps/mips*.mk: drop -no-pie.

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 05 Feb 2020 23:01:35 +0100

glibc (2.30-0experimental1) experimental; urgency=medium

  [ Samuel Thibault ]
  * patches/hurd-i386/tg-sendmsg-SCM_RIGHTS.diff: Rename to
    git-sendmsg-SCM_RIGHTS.diff.
  * patches/hurd-i386/tg-context_functions.diff: Rename to
    git-context_functions.diff.
  * patches/hurd-i386/tg-hurdsig-fixes.diff: Rename to git-hurdsig-fixes.diff.
  * patches/hurd-i386/tg-hurdsig-global-dispositions.diff: Rename to
    git-hurdsig-global-dispositions.diff, refresh.
  * patches/hurd-i386/local-hurdsig-globaldisp-version.diff: Rename to
    git-hurdsig-globaldisp-version.diff.
  * patches/hurd-i386/tg-hurdsig-fixes-2.diff: Rename to
    git-hurdsig-fixes-2.diff.
  * patches/hurd-i386/tg-hurdsig-boot-fix.diff: Rename to
    git-hurdsig-boot-fix.diff.
  * patches/hurd-i386/libpthread_sigs.diff: Rename to libpthread_sigs.diff.
  * patches/hurd-i386/local-hurd_sigstate-PLT.diff: Rename to
    git-hurd_sigstate-PLT.diff.
  * patches/hurd-i386/tg-hurdsig-SA_SIGINFO.diff: Refresh.

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 02 Jan 2020 12:16:20 +0100

glibc (2.30-0experimental0) experimental; urgency=medium
