@@ -21,7 +21,6 @@ ifeq (,$(filter nobiarch, $(DEB_BUILD_PROFILES)))
 #armel_configure_target = arm-linux-gnueabi
 #armel_CC = $(CC) -mfloat-abi=soft
 #armel_CXX = $(CXX) -mfloat-abi=soft
-#armel_crypt = yes
 #armel_slibdir = /lib/arm-linux-gnueabi
 #armel_libdir = /usr/lib/arm-linux-gnueabi
 #
