@@ -38,7 +38,6 @@ amd64_configure_target = x86_64-linux-gnu
 # /usr/include/asm wrappers need that symbol.
 amd64_CC = $(CC) -m64 -D__x86_64__
 amd64_CXX = $(CXX) -m64 -D__x86_64__
-amd64_crypt = yes
 amd64_mvec = yes
 amd64_rtlddir = /lib64
 amd64_slibdir = /lib64
@@ -75,7 +74,6 @@ libc6-x32_shlib_dep = libc6-x32 (>= $(shlib_dep_ver))
 x32_configure_target = x86_64-linux-gnux32
 x32_CC = $(CC) -mx32
 x32_CXX = $(CXX) -mx32
-x32_crypt = yes
 x32_mvec = yes
 x32_rtlddir = /libx32
 x32_slibdir = /libx32
