@@ -11,7 +11,6 @@ libc6-mips64_shlib_dep = libc6-mips64 (>= $(shlib_dep_ver))
 mips64_configure_target = mipsisa64r6-linux-gnuabi64
 mips64_CC = $(CC) -mabi=64
 mips64_CXX = $(CXX) -mabi=64
-mips64_crypt = yes
 mips64_rtlddir = /lib64
 mips64_slibdir = /lib64
 mips64_libdir = /usr/lib64
@@ -23,7 +22,6 @@ libc6-mips32_shlib_dep = libc6-mips32 (>= $(shlib_dep_ver))
 mips32_configure_target = mipsisa32r6-linux-gnu
 mips32_CC = $(CC) -mabi=32
 mips32_CXX = $(CXX) -mabi=32
-mips32_crypt = yes
 mips32_rtlddir = /lib
 mips32_slibdir = /libo32
 mips32_libdir = /usr/libo32
