@@ -12,7 +12,6 @@ GLIBC_PASSES += s390
 DEB_ARCH_MULTILIB_PACKAGES += libc6-s390 libc6-dev-s390
 libc6-s390_shlib_dep = libc6-s390 (>= $(shlib_dep_ver))
 s390_configure_target = s390-linux-gnu
-s390_crypt = yes
 s390_CC = $(CC) -m31
 s390_CXX = $(CXX) -m31
 s390_slibdir = /lib32
