@@ -14,7 +14,6 @@ libc6-sparc64_shlib_dep = libc6-sparc64 (>= $(shlib_dep_ver))
 sparc64_configure_target=sparc64-linux-gnu
 sparc64_CC = $(CC) -m64
 sparc64_CXX = $(CXX) -m64
-sparc64_crypt = yes
 sparc64_rtlddir = /lib64
 sparc64_slibdir = /lib64
 sparc64_libdir = /usr/lib64
