@@ -15,7 +15,6 @@ libc6-amd64_shlib_dep = libc6-amd64 (>= $(shlib_dep_ver))
 amd64_configure_target = x86_64-linux-gnu
 amd64_CC = $(CC) -m64
 amd64_CXX = $(CXX) -m64
-amd64_crypt = yes
 amd64_mvec = yes
 amd64_rtlddir = /lib64
 amd64_slibdir = /lib64
@@ -47,7 +46,6 @@ libc6-i386_shlib_dep = libc6-i386 (>= $(shlib_dep_ver))
 i386_configure_target = i686-linux-gnu
 i386_CC = $(CC) -m32
 i386_CXX = $(CXX) -m32
-i386_crypt = yes
 i386_mvec = no
 i386_slibdir = /lib32
 i386_libdir = /usr/lib32
