@@ -25,6 +25,8 @@ glibc (2.30-0experimental3) UNRELEASED; urgency=medium
   * debian/patches/git-updates.diff: update from upstream stable branch:
     - Fix argument passing for inlined syscalls on mips* and riscv64.
       Closes: #951237.
+  * debian/sysdeps/*.mk: stop building libcrypt for multilib packages.
+    Closes: #951880.
 
  -- Samuel Thibault <sthibault@debian.org>  Sat, 08 Feb 2020 03:08:56 +0100
 
